--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,35 +1,9 @@
-{
-  "name": "@alparr/{{ name }}",
-  "private": true,
-  "version": "0.1.0",
-  "exports": {
-    ".": "./index.ts"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "src/*"
-      ]
-    }
-  },
-  "license": "MIT",
-  "scripts": {
-    "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "typecheck": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@alparr/eslint-config": "workspace:^0.2.0",
-    "@alparr/prettier-config": "workspace:^0.1.0",
-    "@alparr/tsconfig": "workspace:^0.1.0",
-    "eslint": "^8.53.0",
-    "typescript": "^5.3.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@alparr/eslint-config/base"
-    ]
-  },
-  "prettier": "@alparr/prettier-config"
-}
+{ "name": "@homarr/{{name}}", "private": true, "version": "0.1.0", "exports": {
+".": "./index.ts" }, "typesVersions": { "*": { "*": [ "src/*" ] } }, "license":
+"MIT", "scripts": { "clean": "rm -rf .turbo node_modules", "lint": "eslint .",
+"format": "prettier --check . --ignore-path ../../.gitignore", "typecheck": "tsc
+--noEmit" }, "devDependencies": { "@homarr/eslint-config": "workspace:^0.2.0",
+"@homarr/prettier-config": "workspace:^0.1.0", "@homarr/tsconfig":
+"workspace:^0.1.0", "eslint": "^8.53.0", "typescript": "^5.3.3" },
+"eslintConfig": { "extends": [ "@homarr/eslint-config/base" ] }, "prettier":
+"@homarr/prettier-config" }
