--- a/turbo/generators/templates/tsconfig.json.hbs
+++ b/turbo/generators/templates/tsconfig.json.hbs
@@ -1,8 +1,3 @@
-{
-  "extends": "@alparr/tsconfig/base.json",
-  "compilerOptions": {
-    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
-  },
-  "include": ["*.ts", "src"],
-  "exclude": ["node_modules"]
-}
+{ "extends": "@homarr/tsconfig/base.json", "compilerOptions": {
+"tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json" }, "include": ["*.ts",
+"src"], "exclude": ["node_modules"] }
