chore: migrate gridstack to homarr gridstack

--- a/apps/nextjs/src/styles/gridstack.scss
+++ b/apps/nextjs/src/styles/gridstack.scss
@@ -1,4 +1,4 @@
-@import "fily-publish-gridstack/dist/gridstack.min.css";
+@import "@homarr/gridstack/dist/gridstack.min.css";
 
 :root {
   --gridstack-widget-width: 64;
