--- a/packages/spotlight/src/component.module.css
+++ b/packages/spotlight/src/component.module.css
@@ -1,3 +1,3 @@
 .spotlightAction[data-selected="true"] {
-  background-color: #fc05 !important;
+  background-color: alpha(var(--mantine-primary-color-filled), 0.3);
 }
