--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,9 +1,8 @@
 { "name": "@homarr/{{name}}", "private": true, "version": "0.1.0", "exports": {
 ".": "./index.ts" }, "typesVersions": { "*": { "*": [ "src/*" ] } }, "license":
-"MIT", "scripts": { "clean": "rm -rf .turbo node_modules", "lint": "eslint .",
-"format": "prettier --check . --ignore-path ../../.gitignore", "typecheck": "tsc
---noEmit" }, "devDependencies": { "@homarr/eslint-config": "workspace:^0.2.0",
+"MIT", "scripts": { "clean": "rm -rf .turbo node_modules", "lint": "eslint",
+"format": "prettier --check . --ignore-path ../../.gitignore", "typecheck": "tsc --noEmit" }, "devDependencies": { "@homarr/eslint-config": "workspace:^0.3.0",
 "@homarr/prettier-config": "workspace:^0.1.0", "@homarr/tsconfig":
 "workspace:^0.1.0", "eslint": "^8.57.0", "typescript": "^5.4.2" },
-"eslintConfig": { "extends": [ "@homarr/eslint-config/base" ] }, "prettier":
+"prettier":
 "@homarr/prettier-config" }
