--- a/apps/nextjs/src/app/[locale]/manage/tools/api/swagger-ui.css
+++ b/apps/nextjs/src/app/[locale]/manage/tools/api/swagger-ui.css
@@ -7146,9 +7146,6 @@
 }
 .swagger-ui .wrapper {
   box-sizing: border-box;
-  margin: 0 auto;
-  max-width: 1460px;
-  padding: 0 20px;
   width: 100%;
 }
 .swagger-ui .opblock-tag-section {
@@ -7734,7 +7731,7 @@
   background: #fff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
   margin: 0 0 20px;
-  padding: 30px 0;
+  padding: 30px 20px;
 }
 .swagger-ui .scheme-container .schemes {
   align-items: flex-end;
