--- a/apps/nextjs/src/app/[locale]/boards/[name]/settings/customcss.module.css
+++ b/apps/nextjs/src/app/[locale]/boards/[name]/settings/customcss.module.css
@@ -1,18 +1,12 @@
 .codeEditorFooter {
   border-bottom-left-radius: var(--mantine-radius-sm);
   border-bottom-right-radius: var(--mantine-radius-sm);
-  background-color: light-dark(
-    var(--mantine-color-gray-1),
-    var(--mantine-color-dark-7)
-  );
+  background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-7));
 }
 
 .codeEditorRoot {
   margin-top: 4px;
-  border-color: light-dark(
-    var(--mantine-color-gray-4),
-    var(--mantine-color-dark-4)
-  );
+  border-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4));
   border-width: 1px;
   border-style: solid;
   border-radius: var(--mantine-radius-sm);
