--- a/packages/widgets/src/rssFeed/component.module.scss
+++ b/packages/widgets/src/rssFeed/component.module.scss
@@ -3,8 +3,9 @@
   width: 100%;
   height: 100%;
   filter: blur(5px);
-  transform: scale(-1.05);
+  transform: scaleX(-1.05) scaleZ(-1.05);
   opacity: 0.25;
   top: 0;
   left: 0;
+  object-fit: cover;
 }
